--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width">
 
-  <title>378 Website Starter</title>
+  <title>Eric Huesca, Designer</title>
  
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/4.1.1/normalize.css">  
   <link rel="stylesheet" href="css/styles.css">	
@@ -12,7 +12,22 @@
 </head>
 <body>
 	
-	<h1>378 Website Starter</h1>
+	<h1>Eric Huesca</h1>
+	
+	 <!---images-->
+    <img src="http://placebeyonce.com/400-300" alt="">
+    	
+<!---bio-->
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis officiis, at a pariatur maiores quas dolores vero excepturi delectus, quam earum ipsam temporibus corporis sed dolor officia quis consectetur neque.</p>
+	
+	
+	<h3>Lets Connect</h3>
+ <!---links--->
+    <ul>
+	    <li><a href="#">Link A</a></li>
+        <li><a href="#">Link B</a></li>
+	    <li><a href="#">Link C</a></li>
+	</ul>
 
 	
 
