--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<h3>Lets Connect</h3>
  <!---links--->
     <ul>
-	    <li><a href="#">Link A</a></li>
+	    <li><a href="http://codepen.io/ehuesca/"><img src="https://img.ogol.io/codepen.io/ntckj4.png" alt=""></a></li>
         <li><a href="#">Link B</a></li>
 	    <li><a href="#">Link C</a></li>
 	</ul>
@@ -32,6 +32,7 @@
 	
 
 <!-- Scripts -->
+    <script src="/path/to/masonry.pkgd.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   	<script src="js/plugin.js"></script>
   	<script src="js/scripts.js"></script>
