--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 
 
 <!doctype html>
-<img class="topimg" src="http://dudesphotography.smugmug.com/Cars/Joes-Impreza-25i-on-18x95/i-Jn5Gk8z/0/L/DSC_0562-L.jpg" alt="">
+<img class="topimg" src="/img/car.jpg" alt="">
 <html lang="en">
 <head>
  <h1>Eric Huesca</h1>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width">
 
+  <div>
   <title>Eric Huesca, Designer</title>
  
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/4.1.1/normalize.css">  
@@ -23,10 +24,11 @@
     <img class="me" src="/img/me.jpg" alt="">
     	
 <!---bio-->
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis officiis, at a pariatur maiores quas dolores vero excepturi delectus, quam earum ipsam temporibus corporis sed dolor officia quis consectetur neque.</p>
+	<p>Hello, I am a design student currently at Eastern Washington University, i am a senior and i am loving everthing that design has to offer. i have learned to make physical items by using computers and items for the web. I grew up in Mabton, Wa, a very small place but really good with keeping close with everyone around you</p>
 	
 	
 	<h3>Lets Connect to my Online work</h3>
+	</div>
  <!---links--->
     <ul>
 	    <li><a href="http://codepen.io/ehuesca/"><img src="https://img.ogol.io/codepen.io/ntckj4.png" alt=""></a></li>
