--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <img class="topimg" src="/img/car.jpg" alt="">
 <html lang="en">
 <head>
- <h1>Eric Huesca</h1>
+ <h1 class="title">Eric Huesca</h1>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width">
 
@@ -39,10 +39,12 @@
 	
 
 <!-- Scripts -->
-    <script src="/path/to/masonry.pkgd.min.js"></script>
+  <script src="js/scripts.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   	<script src="js/plugin.js"></script>
-  	<script src="js/scripts.js"></script>
+  	
+  	   <script src="/path/to/masonry.pkgd.min.js"></script>
+
 
 </body>
 </html>
