--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	
 	
 	 <!---images-->
-    <img class="me" src="name-plate/img/me.jpg" alt="">
+    <img class="me" src="https://github.com/ehuesca5/Name-plate/blob/gh-pages/img/me.jpg?raw=true" alt="">
     	
 <!---bio-->
 	<p>Hello, I am a design student currently at Eastern Washington University, i am a senior and i am loving everthing that design has to offer. i have learned to make physical items by using computers and items for the web. I grew up in Mabton, Wa, a very small place but really good with keeping close with everyone around you</p>
