--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
 
 <!doctype html>
+<img src="https://github.com/ehuesca5/Name-plate/blob/gh-pages/img/wild_oliva.png?raw=true" alt="">
 <img class="topimg" src="/img/car.jpg" alt="">
 <html lang="en">
 <head>
@@ -28,6 +29,7 @@
 	
 	
 	<h3>Lets Connect to my Online work</h3>
+
 	</div>
  <!---links--->
     <ul>
