--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!doctype html>
 
 <html lang="en">
-<img class="topimg" src="/img/car.jpg" alt="">
+<img class="topimg" src="https://github.com/ehuesca5/Name-plate/blob/gh-pages/img/car.jpg?raw=true" alt="">
 <head>
  <h1 class="title">Eric Huesca</h1>
   <meta charset="UTF-8" />
